# breaching

./: .flake8  .gitignore  .pre-commit-config.yaml  Analytic Attack - Batched Text - Hand Computations-GPT.ipynb  Analytic Attack - Batched Text - Hand Computations.ipynb  Analytic Attack - Batched Text.ipynb  Analytic Attack - ImageNet OneShot.ipynb  Analytic Attack - ImageNet baseline.ipynb  Analytic Attack - Industrial OneShot.ipynb  Analytic Attack - Text - BERT.ipynb  Analytic Attack - Text - GPT.ipynb  Analytic Attack - Text.ipynb  Analytic Attack - Transformers  Analytic Attack - arbitrary position.ipynb  Analytic Attack - differential privacy.ipynb  Analytic Attack - federated AVG.ipynb  Analytic Attack.ipynb  Failed conv binning tests.ipynb  Interactive gradient Inversion - Text.ipynb  Interactive gradient inversion attacks - Analytic Class Attack on ViT.ipynb  Interactive gradient inversion attacks - CIFAR10 Example.ipynb  Interactive gradient inversion attacks - Class Attack.ipynb  Interactive gradient inversion attacks - Class Collision.ipynb  Interactive gradient inversion attacks - Feature Reconstruction.ipynb  Interactive gradient inversion attacks - Fishing.ipynb  Interactive gradient inversion attacks - Small Batch.ipynb  Interactive gradient inversion attacks on a particular class.ipynb  Interactive gradient inversion attacks on cls collision.ipynb  Interactive gradient inversion attacks-Active BN.ipynb  Interactive gradient inversion attacks-Copy1.ipynb  Interactive gradient inversion attacks-Sanity Check.ipynb  Interactive gradient inversion attacks.ipynb  Investigations into registered PSNR.ipynb  LICENSE.md  MANIFEST.in  Pathing through ConvNets, simple CNN.ipynb  README.MD  README.md  Text Example.ipynb  Trivial Convnets.ipynb  (+50 more)
_models/: README.MD
attacks/: base_attacker.py
breaching/: __init__.py  common.py  utils.py
cache/: shakespeare_cache_0.txt  shakespeare_cache_1.txt  shakespeare_cache_5.txt  stackoverflow_cache_0.txt  stackoverflow_cache_1.txt  (+3 more)
(+268 files in other folders)
