

[metadata]
name = breaching
version = 0.1.2
author = Jonas Geiping
author_email = jonas.geiping@gmail.com
url = https://github.com/JonasGeiping/breaching
description = Framework for Attacks against Privacy in Federated Learning
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = Federated Learning, Privacy, PyTorch, Machine Learning, Security Audit, Research
classifiers =
    Topic :: Security
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
homepage = "https://github.com/JonasGeiping/breaching"
repository = "https://github.com/JonasGeiping/breaching"
# documentation = "put arxiv link here""

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:

setup_requires =
    setuptools

install_requires =
    torch >= 1.10
    torchvision
    hydra-core >= 1.1
    scipy
    lpips

scripts =
  simulate_breach.py
  benchmark_breaches.py

[options.package_data]
* =  "*.yaml", "*.txt"


[tool.black]
line-length = 120

[check-manifest]
ignore =
    .ipynb
    .sh


#inspired by https://github.com/pytorch/pytorch/blob/master/.flake8
[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 120
extend-ignore = E203

ignore =
    E203,E305,E402,E501,E721,E741,F821,F841,F999,W503,W504,C408,E302,W291,E303,
    # shebang has extra meaning in fbcode lints, so I think it's not worth trying
    # to line this up with executable bit
    EXE001,
    # these ignores are from flake8-bugbear; please fix!
    B007,B008,
    # these ignores are from flake8-comprehensions; please fix!
    C400,C401,C402,C403,C404,C405,C407,C411,C413,C414,C415
    #unignored: F403,F405,
    D102,D103,D403 # for doc linting

  exclude =
      .git
      __pycache__
      dl/*
      scripts/*
      tables/*
      log/*
